Alignment for mobile fixes

--- a/src/styles/components/MasterHeader.scss
+++ b/src/styles/components/MasterHeader.scss
@@ -81,7 +81,6 @@ nav.navbar{
       height: 45px;
       a{
         display: block;
-        @include center-align(v);
       }
     }
     .row{
